OSSM/1_32/must-gather.local.3859268501405119422/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4d59bccd930a20d3ef173ce3b67824c13e4a552054077134140a87f49a661feb/namespaces/user-ns/serving.knative.dev/services.yaml
---
apiVersion: serving.knative.dev/v1
items:
- apiVersion: serving.knative.dev/v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"serving.knative.dev/v1","kind":"Service","metadata":{"annotations":{"serving.knative.openshift.io/enablePassthrough":"true"},"name":"helloworld-go","namespace":"user-ns"},"spec":{"template":{"metadata":{"annotations":{"autoscaling.knative.dev/minScale":"2","autoscaling.knative.dev/target":"10","autoscaling.knative.dev/targetBurstCapacity":"0","queue.sidecar.serving.knative.dev/resourcePercentage":"0.3","sidecar.istio.io/inject":"true","sidecar.istio.io/rewriteAppHTTPProber [...]
      serving.knative.dev/creator: system:admin
      serving.knative.dev/lastModifier: system:admin
      serving.knative.openshift.io/enablePassthrough: "true"
    creationTimestamp: "2024-06-05T10:59:13Z"
    generation: 1
    managedFields:
    - apiVersion: serving.knative.dev/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
            f:serving.knative.openshift.io/enablePassthrough: {}
        f:spec:
          .: {}
          f:template:
            .: {}
            f:metadata:
              .: {}
              f:annotations:
                .: {}
                f:autoscaling.knative.dev/minScale: {}
                f:autoscaling.knative.dev/target: {}
                f:autoscaling.knative.dev/targetBurstCapacity: {}
                f:queue.sidecar.serving.knative.dev/resourcePercentage: {}
                f:sidecar.istio.io/inject: {}
                f:sidecar.istio.io/rewriteAppHTTPProbers: {}
              f:labels:
                .: {}
                f:app: {}
            f:spec:
              .: {}
              f:containers: {}
      manager: kubectl-client-side-apply
      operation: Update
      time: "2024-06-05T10:59:13Z"
    - apiVersion: serving.knative.dev/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:status:
          .: {}
          f:address:
            .: {}
            f:url: {}
          f:conditions: {}
          f:latestCreatedRevisionName: {}
          f:latestReadyRevisionName: {}
          f:observedGeneration: {}
          f:traffic: {}
          f:url: {}
      manager: controller
      operation: Update
      subresource: status
      time: "2024-06-05T10:59:20Z"
    name: helloworld-go
    namespace: user-ns
    resourceVersion: "44058"
    uid: d30abd09-975d-4327-a440-ef03bb5a8d6e
  spec:
    template:
      metadata:
        annotations:
          autoscaling.knative.dev/minScale: "2"
          autoscaling.knative.dev/target: "10"
          autoscaling.knative.dev/targetBurstCapacity: "0"
          queue.sidecar.serving.knative.dev/resourcePercentage: "0.3"
          sidecar.istio.io/inject: "true"
          sidecar.istio.io/rewriteAppHTTPProbers: "true"
        creationTimestamp: null
        labels:
          app: helloworld-go
      spec:
        containerConcurrency: 0
        containers:
        - env:
          - name: TARGET
            value: Go Sample v1
          image: docker.io/skonto/helloworld-go
          imagePullPolicy: Always
          name: user-container
          readinessProbe:
            successThreshold: 1
            tcpSocket:
              port: 0
          resources:
            requests:
              cpu: 200m
        enableServiceLinks: false
        timeoutSeconds: 300
    traffic:
    - latestRevision: true
      percent: 100
  status:
    address:
      url: http://helloworld-go.user-ns.svc.cluster.local
    conditions:
    - lastTransitionTime: "2024-06-05T10:59:19Z"
      status: "True"
      type: ConfigurationsReady
    - lastTransitionTime: "2024-06-05T10:59:20Z"
      status: "True"
      type: Ready
    - lastTransitionTime: "2024-06-05T10:59:20Z"
      status: "True"
      type: RoutesReady
    latestCreatedRevisionName: helloworld-go-00001
    latestReadyRevisionName: helloworld-go-00001
    observedGeneration: 1
    traffic:
    - latestRevision: true
      percent: 100
      revisionName: helloworld-go-00001
    url: https://helloworld-go-user-ns.apps.ci-ln-bxslict-76ef8.origin-ci-int-aws.dev.rhcloud.com
kind: ServiceList
metadata:
  continue: ""
  resourceVersion: "54810"
